some design fix, prep to account update functions

--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -27,7 +27,11 @@
         </div>
         <div class="ps-row">
             <div class="ps-cell">
-                <span class="email_title">E-Mail<a href="#" class="email_confirm">(Confirm)</a></span>
+                <span class="email_title">
+                    E-Mail
+                    <a href="#" class="email_confirm">(Confirm)</a>
+                    <a href="#" class="email_change">(Change)</a>
+                </span>
                 <input type="text" placeholder="E-Mail" name="as-email">
             </div>
             <div class="ps-cell">
@@ -41,7 +45,8 @@
             <div class="ps-cell">
                 <span>Profile picture</span>
                 <div class="ps-ppic_cont">
-
+                    <img src="" class="as-profile_picture" alt="Account settings - Profile picture">
+                    <button type="button" class="change_pp-btn">Change</button>
                 </div>
             </div>
         </div>
