--- a/OmneFictio.Web/wwwroot/css/register.css
+++ b/OmneFictio.Web/wwwroot/css/register.css
@@ -19,9 +19,8 @@
   width: 100%;
   color: var(--text-color1);
   font-family: "Itim", cursive;
-  margin-top: 20px;
-  border-radius: 10px;
-  background: var(--register-form-color);
+  background-color: var(--background-color1);
+  border-bottom: 1px solid var(--background-color2);
 }
 .register .register-main {
   display: flex;
@@ -46,12 +45,12 @@
 .register .register-main .rm-primary .rm-textbox {
   width: 100%;
   margin-bottom: 14px;
-  background-color: var(--register-input-color);
-  color: var(--text-color1);
   padding: 6px 10px;
   border-radius: 4px;
-  border: none;
   outline: none;
+  color: var(--text-color1);
+  background-color: var(--input-bg1);
+  border: 1px solid var(--input-border1);
 }
 .register .register-main .rm-primary .rm-submit {
   width: 50%;
@@ -116,18 +115,21 @@
   width: 1rem;
 }
 .register .register-extra .re-primary > select {
-  background-color: var(--register-input-color);
-  color: var(--text-color1);
   border-radius: 4px;
-  border: none;
   outline: none;
   padding: 6px;
+  color: var(--text-color1);
+  background-color: var(--input-bg1);
+  border: 1px solid var(--input-border1);
 }
 
 @media (min-width: 768px) {
   .register {
     flex-direction: row;
     padding: 20px 0;
+    border-radius: 4px;
+    border: 1px solid var(--background-color2);
+    margin-top: 20px;
   }
   .register .register-main .rm-registerwith {
     padding-top: 14px;
