--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -19,6 +19,7 @@
     --text-boxshadow2: #ffffff70;
 
     --input-bg1: #313131;
+    --input-bg-hover1: #3e3e3e;
     --input-border1: #5e5e5e;
     
     //modals
@@ -119,6 +120,7 @@
     --text-boxshadow2: #00000070;
 
     --input-bg1: #f7f7f7;
+    --input-bg-hover1: #ffffff;
     --input-border1: #5e5e5e;
     
     //modals
