Update account settings

--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -52,7 +52,7 @@
         </div>
         <div class="ps-row psr-actions">
             <button>Revert</button>
-            <button>Save</button>
+            <button class="as-savebtn">Save</button>
         </div>
     </div>
 </template>
