--- a/OmneFictio.Web/wwwroot/css/profile.css
+++ b/OmneFictio.Web/wwwroot/css/profile.css
@@ -148,7 +148,7 @@
   text-align: center;
 }
 .profile_details .pr-header .pr-name .pr-displayname {
-  font-family: "Itim", cursive;
+  font-family: "Times New Roman", cursive;
   font-size: 1.1rem;
   text-align: center;
 }
