--- a/OmneFictio.Web/wwwroot/css/profile.scss
+++ b/OmneFictio.Web/wwwroot/css/profile.scss
@@ -169,7 +169,7 @@
             }
 
             .pr-displayname {
-                font-family: 'Itim', cursive;
+                font-family: "Times New Roman", cursive;
                 font-size: 1.1rem;
                 text-align: center;
             }
